# topovis

./: .gitignore  README.md
lss-vis/: package-lock.json  package.json
lss-vis/src/: App.js  highlight.js
scripts/: datagen.py  gen_circle.py  plot_complex_dist.py  sdss_filter.py
scripts/sdss_query/: query.sql
server/: CMakeLists.txt  build_cube.cpp  build_cube.h  example_gen.cc  preprocessing.cc  test.cc  topocubes.cc  topocubes.h  toposerver.cc
server/topology/: boundary_matrix.cpp  boundary_matrix.h  cover.cpp  cover.h  filtration.cpp  filtration.h  fixed_filtration.cpp  fixed_filtration.h  fps_rips_filtration.cpp  generalized_metric_space.cpp  generalized_metric_space.h  metric_space.h  persistence.cpp  persistence.h  rips_filtration.cpp  simplex.cpp  simplex.h  simplicial_complex.cpp  simplicial_complex.h  sparse_rips_filtration.cpp
webui/: index.html  main.js  mesh.csv  scatterplot.js
webui-react/: README.md  package-lock.json  package.json
webui-react/public/: index.html
webui-react/src/: App.js
