project(persistence)

list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")	# enables C++ 11 features
set(CMAKE_BUILD_TYPE Release)

include_directories(${persistence_SOURCE_DIR})

subdirs(geometry topology)

add_executable(toposerver toposerver.cc mongoose.c)
target_link_libraries( toposerver topology geometry ANN )

add_executable(example_gen example_gen.cc)
target_link_libraries( example_gen topology geometry ANN )

add_executable(build_cube build_cube.cpp)
target_link_libraries( build_cube topology geometry ANN )


